--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongoose": "^6.13.3"
+    "mongoose": "^6.13.3",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
