--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= npm run build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,8 +45,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.11",
-    "dotenv": "^16.4.5"
+    "tailwindcss": "^3.4.11"
   }
 }
