--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,9 @@
     "backend-server": "file:",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^6.13.3",
-    "dotenv": "^16.4.5"
+    "mongoose": "^6.13.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
