--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^6.13.3"
+    "mongoose": "^6.13.3",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
