--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 REACT_APP_WOMPI_API_KEY_PUB=pub_prod_bHy31AZLAQdRdRyPM3Q4SDRidncPrPwr
+REACT_APP_WOMPI_INTEGRITY_KEY=prod_integrity_PmxTflsSV8BHSRhHqn7PHUSZ1IVKWIdt
