--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.8.1",
     "que-chimba-moto-app": "file:",
